--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^7.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
